--- a/video-summarizer/src/app/user-profile/user-profile.component.html
+++ b/video-summarizer/src/app/user-profile/user-profile.component.html
@@ -1,1 +1,44 @@
-<p>user-profile works!</p>
+<div class="flex flex-col items-center justify-center min-h-screen bg-gray-100">
+    <!-- Profile Card -->
+    <div *ngIf="showProfile" class="bg-white shadow-lg rounded-lg p-6 w-96 mt-4 overflow-hidden">
+      <div class="flex">
+        <div class="w-1/3 flex items-center justify-center p-4">
+          <h5 class="text-lg font-semibold">Image</h5>
+        </div>
+        <div class="w-2/3 p-4">
+          <h5 class="text-xl font-semibold">{{ userDetails?.username }}</h5>
+          <p class="text-gray-600"><i class="fas fa-envelope"></i> {{ userDetails?.email }}</p>
+          <button class="bg-blue-500 hover:bg-blue-600 text-white py-1 px-3 text-sm rounded mt-3" (click)="togglePasswordForm()">Update Password</button>
+        </div>
+      </div>
+    </div>
+  
+    <div *ngIf="showPasswordForm" class="bg-white shadow-lg rounded-lg p-6 w-96 mt-4">
+      <div class="text-center">
+        <h3 class="text-2xl font-semibold">Update Password</h3>
+      </div>
+      <form [formGroup]="passwordform" (ngSubmit)="updatePassword()">
+        <div class="mt-4 relative">
+          <i class="fas fa-lock absolute left-3 top-3 text-gray-500"></i>
+          <input type="password" formControlName="oldPassword" class="w-full p-2 border border-gray-300 rounded-md text-gray-600 focus:outline-none focus:ring-1 focus:ring-blue-600" placeholder="Enter the old Password"/>
+        </div>
+        <div class="text-sm text-red-600 mt-1" *ngIf="submitted && passwordform.get('oldPassword')?.invalid">This field is required</div>
+  
+        <div class="mt-4 relative">
+          <i class="fas fa-lock absolute left-3 top-3 text-gray-500"></i>
+          <input type="password" formControlName="password" class="w-full p-2 border border-gray-300 rounded-md text-gray-600 focus:outline-none focus:ring-1 focus:ring-blue-600" placeholder="Enter the New Password"/>
+        </div>
+        <div class="text-sm text-red-600 mt-1" *ngIf="submitted && passwordform.get('password')?.invalid">This field is required</div>
+  
+        <div class="flex justify-center mt-4 space-x-3">
+          <button type="submit" class="bg-blue-500 hover:bg-blue-600 text-white py-2 px-4 rounded-lg w-24">Update</button>
+          <button type="button" class="bg-gray-500 hover:bg-gray-600 text-white py-2 px-4 rounded-lg w-24" (click)="togglePasswordForm()">Cancel</button>
+        </div>
+  
+        <div class="flex justify-center mt-4">
+          <div *ngIf="errorMessage" class="text-sm text-red-500">{{ errorMessage }}</div>
+        </div>
+      </form>
+    </div>
+  </div>
+  
